# 3d-model-viewer

./: CHANGES.md  README.md  gradlew  gradlew.bat  settings.gradle
.github/workflows/: android.yml  build.yml
3d-viewer-enhanced/: .gitignore  README.md
3d-viewer-enhanced/app/src/main/: AndroidManifest.xml
3d-viewer-enhanced/app/src/main/cpp/: jni_bridge.cpp  model_loader.cpp  renderer.cpp  renderer.h
3d-viewer-enhanced/app/src/main/java/com/modelviewer3d/: EditorPanelFragment.kt  MeshListFragment.kt  NativeLib.kt
3d-viewer-enhanced/app/src/main/res/drawable/: bg_bottom_sheet.xml  bg_card_dark.xml  bg_card_selected.xml  bg_hint_card.xml  bg_input_field.xml  bg_pill.xml  bg_status_bar.xml  bg_toolbar.xml  ic_save.xml  ic_share.xml  ic_visibility.xml  ic_visibility_off.xml
3d-viewer-enhanced/app/src/main/res/values/: colors.xml  themes.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  math_utils.h  mesh_separator.cpp  mesh_separator.h  model_loader.cpp  model_loader.h  renderer.cpp  renderer.h  shader_utils.cpp  shader_utils.h
app/src/main/java/com/modelviewer3d/: EditorPanelFragment.kt  ExportFragment.kt  MainActivity.kt  MeshInfoFragment.kt  MeshListFragment.kt  MeshToolsFragment.kt  ModelGLSurfaceView.kt  ModelRenderer.kt  NativeLib.kt  RingToolFragment.kt  SeparationService.kt
app/src/main/res/drawable/: bg_bottom_bar.xml  bg_btn_accent.xml  bg_btn_danger.xml  bg_hint_card.xml  bg_selection_chip.xml  bg_tool_button.xml  bg_tool_button_active.xml  bg_top_bar.xml  bg_top_bar_btn.xml  ic_close.xml  ic_folder.xml  ic_info.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_layers.xml  ic_mesh_separate.xml  ic_more.xml  ic_move.xml  ic_redo.xml  ic_reset.xml  ic_ring.xml  ic_rotate.xml  ic_ruler.xml  ic_scale.xml  ic_screenshot.xml  ic_select.xml  ic_undo.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
