cmake_minimum_required(VERSION 3.22.1)
project("modelviewer")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)

FetchContent_Declare(
    tinyobjloader
    GIT_REPOSITORY https://github.com/tinyobjloader/tinyobjloader.git
    GIT_TAG        v2.0.0rc13
    GIT_SHALLOW    TRUE
)

FetchContent_Declare(
    tinygltf
    GIT_REPOSITORY https://github.com/syoyo/tinygltf.git
    GIT_TAG        v2.8.21
    GIT_SHALLOW    TRUE
)

FetchContent_MakeAvailable(tinyobjloader tinygltf)

add_library(
    modelviewer
    SHARED
    jni_bridge.cpp
    renderer.cpp
    shader_utils.cpp
    model_loader.cpp
    mesh_separator.cpp
)

target_include_directories(modelviewer PRIVATE
    ${tinyobjloader_SOURCE_DIR}
    ${tinygltf_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}
)

find_library(log-lib     log)
find_library(android-lib android)
find_library(gles3-lib   GLESv3)
find_library(egl-lib     EGL)

target_link_libraries(modelviewer
    ${log-lib}
    ${android-lib}
    ${gles3-lib}
    ${egl-lib}
)

# ── Base flags for ALL ABIs ────────────────────────────────────────────────────
target_compile_options(modelviewer PRIVATE
    -O3
    -ffast-math
    -fvisibility=hidden
    -funroll-loops
)

# ── ABI-specific march flags ───────────────────────────────────────────────────
# ANDROID_ABI is set by the Android Gradle plugin per-ABI build.
# -march=armv8-a is ONLY valid for ARM targets, never for x86_64/x86.
if(ANDROID_ABI STREQUAL "arm64-v8a")
    target_compile_options(modelviewer PRIVATE -march=armv8-a)
elseif(ANDROID_ABI STREQUAL "armeabi-v7a")
    target_compile_options(modelviewer PRIVATE -march=armv7-a -mfpu=neon)
elseif(ANDROID_ABI STREQUAL "x86_64")
    target_compile_options(modelviewer PRIVATE -march=x86-64)
elseif(ANDROID_ABI STREQUAL "x86")
    target_compile_options(modelviewer PRIVATE -march=i686)
endif()
